--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,5 +1,8 @@
 # Get editor completions based on the config schema
 "$schema" = 'https://starship.rs/config-schema.json'
+
+command_timeout = 60000 # 1 minute
+
 [directory]
 truncation_length = 4
 
